--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -24,9 +24,9 @@ div.vision p {
   margin: 0;
 }
 
-#get-in-touch-1 {
+/* #get-in-touch-1 {
   border-radius: 0 0 25px 25px;
-}
+} */
 
 .gallery-section {
   margin-top: 3rem;
