--- a/styles/explore.css
+++ b/styles/explore.css
@@ -25,7 +25,7 @@ figure {
   height: 300px;
   background-image: url(../images/kids-cartoon_large.jpg);
   background-size: cover;
-  background-position: center bottom;
+  background-position: center center;
   background-repeat: no-repeat;
 }
 
@@ -34,15 +34,17 @@ figure {
   background-image: url(../images/researcher-cartoon_large.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center center;
 }
 
-#get-in-touch-1 {
+/* #get-in-touch-1 {
+
   border-radius: 5px;
 }
 
 #get-in-touch-2 {
   border-radius: 0 0 25px 25px;
-}
+} */
 
 /* styles that change
 --------------------*/
