--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -506,7 +506,7 @@ ul li {
   color: var(--white);
   margin: 0.5rem 0 1.5rem 0;
   padding: 1rem;
-  box-shadow: 0 6px 12px #1D2671bf;
+  /* box-shadow: 0 6px 12px #1D2671bf; */
 }
 
 .section-container {
@@ -527,19 +527,21 @@ ul li {
   justify-content: center;
   gap: 1rem;
   text-align: center;
-  background-color: #1D267120;
-  /* color: #1D2671; */
-  font-size: 1.25rem;
+  background: rgb(60,60,60);
+  background: linear-gradient(129deg, rgba(60,60,60,1) 0%, rgba(37,37,37,1) 100%);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   padding: 1rem;
 }
 
 .cta-wrapper p {
   font-family: var(--proxima);
+  font-size: 1.125rem;
   font-weight: 900;
   text-transform: uppercase;
   margin: 0;
   padding: 0;
-  color: #1D2671;
+  color: var(--white);
   /* background-image: linear-gradient(to right, #C33764 0%, #1D2671 100%);
   background-clip: text; */
     /* -webkit-text-fill-color: transparent; */
@@ -681,8 +683,8 @@ ul li {
 } */
 
 .info-box {
-  background-color: #1D267120;
-  color: #1D2671;
+  background-color: #f1f1f1;
+  color: var(dark);
   padding: 1rem;
   border-radius: 5px;
 }
@@ -945,6 +947,10 @@ footer {
     gap: 2rem;
   }
 
+  .cta-wrapper p {
+    font-size: 1.25rem;
+  }
+
   /* Footer
 --------------------*/
   .footer-wrapper {
@@ -995,9 +1001,9 @@ footer {
     font-size: 1.375rem;
   }
   
-  .cta-wrapper p {
-    font-size: 1.5rem;
-  }
+  /* .cta-wrapper p {
+    font-size: 1.3755rem;
+  } */
 
   .newsletter-label {
     font-size: 1.125rem;
