--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -50,10 +50,11 @@
 
 .card {
   position: relative;
-  border-radius: 5px;
-  box-shadow: 0 6px 12px #00000029;
-  background-color: var(--white);
-  color: var(--dark);
+  /* max-width: 500px; */
+  /* border-radius: 5px; */
+  /* box-shadow: 0 6px 12px #00000029; */
+  background-color: var(--dark);
+  color: var(--white);
 }
 
 .card-heading {
@@ -61,6 +62,7 @@
   top: 0;
   left: 50%;
   width: 80%;
+  max-width: 400px;
   font-family: var(--main-heading);
   color: var(--white);
   text-transform: uppercase;
