--- a/styles/explore.css
+++ b/styles/explore.css
@@ -4,12 +4,6 @@
 /* main 
 --------------------*/
 
-.sec2 {
-  background-color: var(--dark);
-  color: var(--white);
-  padding: 1rem;
-}
-
 .kids-container {
   display: flex;
   flex-direction: column;
@@ -31,20 +25,45 @@
   flex: 1;
 }
 
-.clubs-container {
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
+.clubs-section {
   background-color: var(--dark);
   color: var(--white);
+  padding: 2rem 1rem;
+  margin: 0 auto 2rem auto;
+  /* background: url(../images/kids-cartoon_large.jpg); */
 }
 
 .clubs-wrapper {
   display: flex;
   flex-direction: column;
+  gap: 3rem;
+  background-color: var(--dark);
+  color: var(--white);
+  /* background-color: pink; */
+}
+
+.clubs-container {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  gap: 1rem 2rem;
-  margin: 0 auto;
+  gap: 1rem 3rem;
+  /* background-color: lightblue; */
+}
+
+.clubs-heading {
+  font-family: var(--main-heading);
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+#club-1-heading {
+  color: #F98379;
+}
+
+#club-2-heading {
+  color: #F2BC57;
 }
 
 .clubs-gallery {
@@ -59,6 +78,13 @@
   margin: 0;
   padding: 0;
   border-radius: 5px;
+}
+
+.research-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
 }
 
 .info-box-sub-heading {
@@ -105,14 +131,26 @@ figure, figure img {
 
 /* styles that change
 --------------------*/
+@media only screen and (min-width: 576px) {
+  .clubs-wrapper {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+
 @media only screen and (min-width: 768px) {
-  .sec2 {
-    padding: 2rem;
+  .clubs-wrapper {
+    width: 100%;
   }
 
-  .clubs-wrapper {
+  .clubs-section {
+    padding: 3rem 2rem;
+  }
+
+  .clubs-container {
     flex-direction: row;
     width: 100%;
+    margin: 0 auto;
   }
 }
 
@@ -123,9 +161,13 @@ figure, figure img {
     
   } */
 
-  .clubs-wrapper {
+  .clubs-container {
     flex-direction: row;
     width: 85%;
+  }
+
+  #holiday-club {
+    flex-direction: row-reverse;
   }
 
   .secondary-heading {
@@ -155,8 +197,22 @@ figure, figure img {
     font-size: 1.125rem;
   }
 
-  .secondary-heading {
+  .kids-section, .clubs-section, .research-section {
+    width: 90%;
+    margin: 0 auto 2rem auto;
+  }
+
+  .clubs-container {
+    width: 75%;
+    gap: 3rem;
+  }
+
+  .clubs-heading {
     font-size: 1.5rem;
+  }
+
+  .research-wrapper {
+    flex-direction: row;
   }
 
   /* .clubs-container {
@@ -198,12 +254,12 @@ figure, figure img {
 }
 
 @media only screen and (min-width: 1600px) {
-  .sec2 {
-    width: 80%;
+  .kids-section, .clubs-section, .research-section {
+    width: 85%;
   }
 
-  .clubs-wrapper {
-    width: 70%;
+  .clubs-container {
+    width: 75%;
     gap: 4rem;
   }
 
