--- a/styles/explore.css
+++ b/styles/explore.css
@@ -3,12 +3,28 @@
 
 /* main 
 --------------------*/
+.content-container {
+  width: 100%;
+}
+
+.main-heading-wrapper, .info-box, .item-1, #research-cta-wrapper {
+  width: 90%;
+  margin: 0 auto;
+}
 
 .kids-container {
   display: flex;
   flex-direction: column;
   gap: 1rem 2rem;
+  margin-top: 1rem;
   margin-bottom: 2rem;
+}
+
+.kids-container p:first-child {
+  font-size: 1.125rem;
+  font-weight: bold;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 .kids-container p {
@@ -36,7 +52,6 @@
 .clubs-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
   background-color: var(--dark);
   color: var(--white);
   /* background-color: pink; */
@@ -80,6 +95,13 @@
   border-radius: 5px;
 }
 
+.clubs-divider {
+  background-color: var(white);
+  height: 1px;
+  width: 100%;
+  margin: 2rem 0;
+}
+
 .research-wrapper {
   display: flex;
   flex-direction: column;
@@ -93,6 +115,17 @@
 
 .cta-wrapper {
   width: 100%;
+}
+
+#research-cta-wrapper {
+  background: #f1f1f1;
+  color: var(--dark);
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+
+#research-cta-wrapper p {
+  color: var(--dark);
 }
 
 /* div.blue {
@@ -139,11 +172,27 @@ figure, figure img {
 }
 
 @media only screen and (min-width: 768px) {
+  .content-container {
+    /* width: 90%; */
+  }
+
+  /* .main-heading-wrapper, .info-box, .item-1, #research-cta-wrapper {
+    width: 100%;
+    margin: 0 auto;
+  } */
+  .item-2 {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  
+
   .clubs-wrapper {
     width: 100%;
   }
 
   .clubs-section {
+    width: 90%;
     padding: 3rem 2rem;
   }
 
@@ -151,6 +200,10 @@ figure, figure img {
     flex-direction: row;
     width: 100%;
     margin: 0 auto;
+  }
+
+  #holiday-club {
+    flex-direction: row-reverse;
   }
 }
 
@@ -160,15 +213,16 @@ figure, figure img {
   /* .kids-container {
     
   } */
+  
+
+  
 
   .clubs-container {
     flex-direction: row;
     width: 85%;
   }
 
-  #holiday-club {
-    flex-direction: row-reverse;
-  }
+  
 
   .secondary-heading {
     font-size: 1.375rem;
@@ -197,6 +251,11 @@ figure, figure img {
     font-size: 1.125rem;
   }
 
+  .main-heading-wrapper, .info-box, .item-1, #research-cta-wrapper {
+    width: 100%;
+    margin: 0 auto;
+  }
+
   .kids-section, .clubs-section, .research-section {
     width: 90%;
     margin: 0 auto 2rem auto;
@@ -213,6 +272,10 @@ figure, figure img {
 
   .research-wrapper {
     flex-direction: row;
+  }
+
+  #research-cta-wrapper {
+    margin-top: 1rem;
   }
 
   /* .clubs-container {
@@ -254,9 +317,9 @@ figure, figure img {
 }
 
 @media only screen and (min-width: 1600px) {
-  .kids-section, .clubs-section, .research-section {
+  /* .kids-section, .clubs-section, .research-section {
     width: 85%;
-  }
+  } */
 
   .clubs-container {
     width: 75%;
