--- a/styles/explore.css
+++ b/styles/explore.css
@@ -7,7 +7,7 @@
   width: 100%;
 }
 
-.main-heading-wrapper, .info-box, .item-1, #research-cta-wrapper {
+.main-heading-wrapper, .info-box, .kids-text, #research-cta-wrapper {
   width: 90%;
   margin: 0 auto;
 }
@@ -20,26 +20,26 @@
   margin-bottom: 2rem;
 }
 
-.kids-container p:first-child {
+/* .kids-container p:first-child {
   font-size: 1.125rem;
   font-weight: bold;
   margin-top: 0;
   padding-top: 0;
-}
+} */
 
 .kids-container p {
   font-size: 1rem;
 }
 
-.secondary-heading {
+/* .secondary-heading {
   font-size: 1.25rem;
   margin: 0 auto 2rem auto;
   padding: 0;
-}
+} */
 
-.item-1, .item-2 {
+/* .item-1, .item-2 {
   flex: 1;
-}
+} */
 
 .clubs-section {
   background-color: var(--dark);
@@ -69,16 +69,18 @@
   font-family: var(--main-heading);
   font-size: 1.25rem;
   text-transform: uppercase;
-  margin: 0;
+  margin: 0 0 2rem 0;
   padding: 0;
 }
 
 #club-1-heading {
   color: #F98379;
+  text-decoration: underline;
 }
 
 #club-2-heading {
   color: #F2BC57;
+  text-decoration: underline;
 }
 
 .clubs-gallery {
@@ -99,7 +101,8 @@
   background-color: var(white);
   height: 1px;
   width: 100%;
-  margin: 2rem 0;
+  margin: 3rem 0;
+  opacity: 0.5;
 }
 
 .research-wrapper {
@@ -107,6 +110,7 @@
   flex-direction: column;
   gap: 1rem;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .info-box-sub-heading {
@@ -117,16 +121,18 @@
   width: 100%;
 }
 
-#research-cta-wrapper {
-  background: #f1f1f1;
-  color: var(--dark);
-  border-radius: 5px;
-  margin-top: 1rem;
+#clubs-cta-wrapper {
+  background: linear-gradient(270deg, rgba(60,60,60,1) 0%, rgba(37,37,37,1) 100%);
+  margin-top: 3rem;
 }
 
-#research-cta-wrapper p {
-  color: var(--dark);
+#clubs-cta-wrapper p {
+  color: var(--white);
 }
+
+/* #research-cta-wrapper p {
+  color: var(--dark);
+} */
 
 /* div.blue {
   background-color: var(--blue);
@@ -146,14 +152,6 @@ figure, figure img {
   padding: 0;
 }
 
-/* #item-3 {
-  height: 300px;
-  background-image: url(../images/kids-cartoon_large.jpg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-} */
-
 #item-6 {
   height: 300px;
   background-image: url(../images/researcher-cartoon_large.jpg);
@@ -172,20 +170,11 @@ figure, figure img {
 }
 
 @media only screen and (min-width: 768px) {
-  .content-container {
-    /* width: 90%; */
-  }
-
-  /* .main-heading-wrapper, .info-box, .item-1, #research-cta-wrapper {
-    width: 100%;
-    margin: 0 auto;
-  } */
-  .item-2 {
+ 
+  .kids-figure {
     width: 90%;
     margin: 0 auto;
   }
-
-  
 
   .clubs-wrapper {
     width: 100%;
@@ -210,34 +199,14 @@ figure, figure img {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
-  /* .kids-container {
-    
-  } */
-  
-
-  
-
   .clubs-container {
     flex-direction: row;
     width: 85%;
   }
 
-  
-
-  .secondary-heading {
+  /* .secondary-heading {
     font-size: 1.375rem;
-  }
-
-  #item-4,
-  #item-5,
-  #item-6 {
-    flex: 1;
-  }
-
-  #item-3,
-  #item-6 {
-    height: auto;
-  }
+  } */
 }
 
 @media only screen and (min-width: 1200px) {
@@ -251,7 +220,7 @@ figure, figure img {
     font-size: 1.125rem;
   }
 
-  .main-heading-wrapper, .info-box, .item-1, #research-cta-wrapper {
+  .main-heading-wrapper, .info-box, .kids-text, #research-cta-wrapper {
     width: 100%;
     margin: 0 auto;
   }
@@ -273,54 +242,10 @@ figure, figure img {
   .research-wrapper {
     flex-direction: row;
   }
-
-  #research-cta-wrapper {
-    margin-top: 1rem;
-  }
-
-  /* .clubs-container {
-    flex-direction: row;
-    gap: 5rem;
-  } */
-
-  /* .clubs-wrapper {
-    flex-direction: row;
-    width: 85%;
-  } */
-
-  /* .clubs-wrapper-2::before {
-    content: "";
-    height: 100px;
-    width: 1px;
-    background-color: white;
-  } */
-
-  
-  /* main {
-    background-color: #d8d8d8;
-    font-size: 1.125rem;
-  } */
-
-  /* h2,
-  h3 {
-    font-size: 1.75rem;
-  }
-
-  h4 {
-    font-size: 1.5rem;
-    margin-top: 24px;
-  } */
-  
-  /* div.blue {
-    font-size: 1.25rem;
-  } */
 }
 
 @media only screen and (min-width: 1600px) {
-  /* .kids-section, .clubs-section, .research-section {
-    width: 85%;
-  } */
-
+  
   .clubs-container {
     width: 75%;
     gap: 4rem;
@@ -329,21 +254,5 @@ figure, figure img {
   .clubs-gallery {
     gap: 0.5rem;
   }
-  /* #item-3 {
-    background-image: url(../images/kids-cartoon_large.jpg);
-  } */
 }
 
-@media only screen and (min-width: 1800px) {
-  /* Main
---------------------*/
-
-  #item-4,
-  #item-5 {
-    flex: 2;
-  }
-
-  #item-6 { 
-    flex: 3;
-  }
-}
