--- a/styles/explore.css
+++ b/styles/explore.css
@@ -7,7 +7,7 @@
   width: 100%;
 }
 
-.main-heading-wrapper, .info-box, .kids-text, #research-cta-wrapper {
+.header, .info-box, .kids-text, #research-cta-wrapper {
   width: 90%;
   margin: 0 auto;
 }
@@ -40,6 +40,10 @@
 /* .item-1, .item-2 {
   flex: 1;
 } */
+
+.kids-text p:first-child {
+  margin-top: 0;
+}
 
 .clubs-section {
   background-color: var(--dark);
@@ -105,7 +109,7 @@
   opacity: 0.5;
 }
 
-.research-wrapper {
+.research-grid {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -203,24 +207,20 @@ figure, figure img {
     flex-direction: row;
     width: 85%;
   }
-
-  /* .secondary-heading {
-    font-size: 1.375rem;
-  } */
 }
 
 @media only screen and (min-width: 1200px) {
   /* Main
 --------------------*/
   .kids-container {
-    flex-direction: row;
+    flex-direction: row-reverse;
   }
 
   .kids-container p {
     font-size: 1.125rem;
   }
 
-  .main-heading-wrapper, .info-box, .kids-text, #research-cta-wrapper {
+  .header, .info-box, .kids-text, #research-cta-wrapper {
     width: 100%;
     margin: 0 auto;
   }
@@ -239,7 +239,7 @@ figure, figure img {
     font-size: 1.5rem;
   }
 
-  .research-wrapper {
+  .research-grid {
     flex-direction: row;
   }
 }
