--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -3,100 +3,32 @@
 
 /* main 
 --------------------*/
-/* .main-wrapper {
-  width: 85%;
-  margin: 0 auto;
-  padding-top: 0;
-} */
-
-/* section.main-content {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-} */
-
-
-/* h1 {
-  font-family: var(--proxima);
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-align: left;
-  color: var(--dark-purple);
-  padding: 1rem 5%;
-  margin: 25px 5% 0 0;
-  border-radius: 5px;
-} */
-
-h4 {
-  font-size: 1.25rem;
-  font-weight: 800;
-  font-family: var(--proxima);
-  color: var(--dark-purple);
-  margin: 8px 5% 32px 5%;
-  text-transform: capitalize;
+#item-1 {
+  grid-area: donations;
 }
 
-/* h2 {
-  margin-left: 5%;
-  font-family: var(--proxima);
-  font-size: 1.5rem;
-} */
-
-div.support {
-  width: 100%;
-  background-color: var(--light-grey);
-  margin-bottom: 16px;
-  padding-bottom: 16px;
-  border-radius: 5px;
+#item-2 {
+  grid-area: volunteer;
 }
 
-#get-in-touch-1 {
-  border-radius: 0 0 25px 25px;
+#item-3 {
+  grid-area: internship;
 }
 
-/* div.support p {
-  width: 90%;
-  margin: 0 auto;
-  padding-bottom: 16px;
-} */
+#item-4 {
+  grid-area: cta;
+} 
 
-/* .get-in-touch {
-  margin: 0 auto;
-  background-color: #7c68a6;
-  color: #fff;
-  font-size: 1.25rem;
-  text-align: center;
-  border-radius: 0 50px;
-  display: flex;
-  flex-direction: column;
+.support-grid {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "donations"
+    "volunteer"
+    "internship"
+    "cta";
 }
-
-.get-in-touch > p {
-  font-family: var(--proxima);
-  font-weight: bold;
-  text-transform: uppercase;
-  margin: 16px 0;
-}
-
-p.button {
-  font-family: var(--sofia);
-  display: inline-block;
-  text-align: center;
-  border-radius: 15px;
-  background-color: var(--magenta);
-  color: var(--white);
-  padding: 8px 32px;
-  margin-top: 0;
-  margin-bottom: 16px;
-  border-bottom: 3px solid #fff;
-  border-right: 2px solid #fff;
-  transition-property: scale;
-  transition-duration: 0.5s;
-  scale: 1;
-}
-p.button:hover {
-  scale: 1.1;
-} */
 
 /* styles that change
 --------------------*/
@@ -104,55 +36,13 @@ p.button:hover {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
-  #item-1,
-  #item-2,
-  #item-3
-    {
-    flex: 1;
+  .support-grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas:
+      "donations volunteer internship"
+      "cta cta cta";
   }
-}
-
-@media only screen and (min-width: 1200px) {
-  /* Main
---------------------*/
-  main {
-    background-color: #d8d8d8;
-  }
-
-  /* .main-wrapper {
-    background-color: white;
-    padding-top: 50px;
-  } */
-
-  h4 {
-    display: none;
-  }
-
-  /* h2 {
-    font-size: 1.875rem;
-    margin-bottom: 16px;
-  } */
-
-  section.main-content {
-    width: 90%;
-    font-size: 1.125rem;
-  }
-  /* .get-in-touch {
-    width: 90%;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: center;
-    gap: 64px;
-    padding-top: 12px;
-  }
-  .get-in-touch p {
-    font-size: 1.5rem;
-  }
-  p.button {
-    font-size: 1.35rem;
-  }
-  .bottom-section {
-    width: 85%;
-  } */
 }
 
