--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -464,6 +464,12 @@ ul li {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  gap: 3rem;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
@@ -471,7 +477,6 @@ ul li {
   display: flex;
   gap: 1rem;
   padding: 1rem 0;
-  margin-bottom: 0.5rem;
 }
 
 .main-heading-left {
@@ -497,8 +502,17 @@ ul li {
   margin-top: 0;
   padding-top: 0;
   color: var(--dark);
-  max-width: 700px;
+  /* border-bottom: 2px solid #C33764; */
   /* padding-left: 0.75rem; */
+}
+
+.heading-divider {
+  width: 100%;
+  height: 1px;
+  color: #C33764;
+  opacity: 0.5;
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -526,7 +540,7 @@ ul li {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .cta-wrapper {
@@ -697,7 +711,7 @@ ul li {
 
 .info-box {
   background-color: #f1f1f1;
-  color: var(dark);
+  color: var(--dark);
   padding: 1rem;
   border-radius: 5px;
 }
