--- a/styles/explore.css
+++ b/styles/explore.css
@@ -7,7 +7,7 @@
   width: 100%;
 }
 
-.header, .info-box, .kids-text, #research-cta-wrapper {
+.header, .info-box, .image-box, #research-cta-wrapper {
   width: 90%;
   margin: 0 auto;
 }
@@ -15,9 +15,23 @@
 .kids-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem 2rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
+  /* margin-top: 1rem;
+  margin-bottom: 2rem; */
+}
+
+#info-box-kids {
+  background-color: var(--blue);
+  color: var(--white);
+  /* border-left: 10px solid var(--dark); */
+  border-radius: 0;
+}
+
+#image-box-kids {
+  /* border: 8px solid var(--dark); */
+}
+
+#image-box-kids, #image-box-kids img {
+  border-radius: 0;
 }
 
 /* .kids-container p:first-child {
@@ -27,9 +41,9 @@
   padding-top: 0;
 } */
 
-.kids-container p {
+/* .kids-container p {
   font-size: 1rem;
-}
+} */
 
 /* .secondary-heading {
   font-size: 1.25rem;
@@ -41,9 +55,9 @@
   flex: 1;
 } */
 
-.kids-text p:first-child {
+/* .kids-text p:first-child {
   margin-top: 0;
-}
+} */
 
 .clubs-section {
   background-color: var(--dark);
@@ -113,7 +127,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-top: 2rem;
   margin-bottom: 1rem;
 }
 
@@ -175,10 +188,10 @@ figure, figure img {
 
 @media only screen and (min-width: 768px) {
  
-  .kids-figure {
+  /* .kids-figure {
     width: 90%;
     margin: 0 auto;
-  }
+  } */
 
   .clubs-wrapper {
     width: 100%;
@@ -203,6 +216,20 @@ figure, figure img {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
+  .kids-container {
+    width: 90%;
+    flex-direction: row-reverse;
+    margin: 0 auto;
+  }
+
+  #info-box-kids {
+    flex: 2;
+  }
+
+  #image-box-kids {
+    flex: 3;
+  }
+
   .clubs-container {
     flex-direction: row;
     width: 85%;
@@ -212,8 +239,9 @@ figure, figure img {
 @media only screen and (min-width: 1200px) {
   /* Main
 --------------------*/
+  
   .kids-container {
-    flex-direction: row-reverse;
+    width: 100%;
   }
 
   .kids-container p {
