--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -471,6 +471,7 @@ ul li {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-bottom: 2.5rem;
 }
 
 .main-heading-wrapper {
@@ -499,8 +500,8 @@ ul li {
 .main-heading-lead {
   font-size: 1.125rem;
   font-weight: bold;
-  margin-top: 0;
-  padding-top: 0;
+  margin: 0;
+  padding: 0 3rem 0 0;
   color: var(--dark);
   /* border-bottom: 2px solid #C33764; */
   /* padding-left: 0.75rem; */
@@ -536,12 +537,12 @@ ul li {
   padding: 1rem;
 } */
 
-.section-container {
+/* .section-container {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-}
+} */
 
 .cta-wrapper {
   /* position: absolute;
