--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -460,7 +460,7 @@ ul li {
 }
 
 .content-container {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -468,6 +468,8 @@ ul li {
 }
 
 .header {
+  width: 90%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -501,7 +503,7 @@ ul li {
   font-size: 1.125rem;
   font-weight: bold;
   margin: 0;
-  padding: 0 3rem 0 0;
+  padding: 0;
   color: var(--dark);
   /* border-bottom: 2px solid #C33764; */
   /* padding-left: 0.75rem; */
@@ -713,12 +715,8 @@ ul li {
 .info-box {
   background-color: #f1f1f1;
   color: var(--dark);
-  padding: 1rem;
-  border-radius: 5px;
-}
-
-.image-box, .image-box img {
-  border-radius: 5px;
+  padding: 1rem 5%;
+  /* border-radius: 5px; */
 }
 
 .info-box-heading {
@@ -879,6 +877,7 @@ footer {
 
   /* Main
 --------------------*/
+
   #newsletter {
     font-size: 1.125rem;
   }
@@ -919,6 +918,13 @@ footer {
 
   /* Main
 --------------------*/
+.info-box {
+  border-radius: 5px;
+}
+
+.image-box, .image-box img {
+  border-radius: 5px;
+}
   /* .main-heading-lead {
     padding-left: 0.75rem;
   } */
@@ -1033,6 +1039,7 @@ footer {
 
   .main-heading-lead {
     font-size: 1.375rem;
+    padding-right: 3rem;
   }
 
   .info-box {
